# SceneSaliency

./: CMakeLists.txt  setupcaffe.sh
cmake/: Misc.cmake  Targets.cmake  Utils.cmake
cmake/Modules/: FindCaffe.cmake  FindMatio.cmake  FindMatlabMat.cmake
data/: createallscene.sh
data/saliency/: sun_abkxdgwtijydhugi.mat  sun_acgdjlmiodoklwyl.mat  sun_akrpvpyifvvvkoyv.mat  sun_asujundvaaquhzlk.mat
model/: deploy.prototxt  solver.prototxt  test.txt  train.prototxt  train.sh  train.txt
python/: computerimagemean.py  computermean.sh  convertdata.py  createdataset.py  logging.conf  logging1.conf  mymean  mypredict  mytraining  myvalidation  predictdata.py  predictdata.sh  preparedata.sh  test
tools/: CMakeLists.txt  convert_isun_data.cpp  convert_isun_matlab_data.cpp
